# standalone-Mouse

./: LICENCE  README.md  ubuntu-install.sh
BlockMatching/: CMakeLists.txt  CMakeLists_to_fill.txt
BlockMatching/cmake/: vt.spec.in  vtBuild.cmake  vtConfig.cmake.in  vtDependencies.cmake  vtPack.cmake  vtUse.cmake.in
BlockMatching/src/: CMakeLists.txt
BlockMatching/src/blockmatching/: .blockmatching.c.kate-swp  CMakeLists.txt  GNUmakefile  TODO  api-applyTrsf.c  api-applyTrsf.h  api-applyTrsfToPoints.c  api-applyTrsfToPoints.h  api-blockmatching.c  api-blockmatching.h  api-buildPyramidImage.c  api-buildPyramidImage.h  api-composeTrsf.c  api-composeTrsf.h  api-copyTrsf.c  api-copyTrsf.h  api-createGrid.c  api-createGrid.h  api-createTrsf.c  api-cropImage.c  api-cropImage.h  api-execTemplate.c  api-execTemplate.h  api-intermediaryTrsf.c  api-interpolateImages.c  api-interpolateImages.h  api-invTrsf.c  api-invTrsf.h  api-pointmatching.c  api-pointmatching.h  applyTrsf.c  applyTrsfToPoints.c  bal-block.c  bal-blockmatching-param-tools.c  bal-blockmatching-param.c  bal-blockmatching-param.h  bal-blockmatching.c  bal-field-tools.c  bal-field-tools.h  bal-field.c  (+47 more)
BlockMatching/src/blockmatching/documentation/: doc-blockmatching.aux  doc-blockmatching.tex  doc-blockmatching.toc  inc-devel-doc.tex  inc-devel-notes.tex  inc-method-notes.tex  inc-misc.tex  inc-use-examples.tex  inc-user-apis.tex  inc-user-commdline.tex
BlockMatching/src/blockmatching/documentation/figures/: api-blockmatching.pptx  fig-frame.pptx
BlockMatching/src/blockmatching/documentation/use-examples/: example01.bash  example02.bash  example03.bash  example04.bash
BlockMatching/src/blockmatching/documentation/use-examples/data/: irm2D-1.hdr  irm2D-1.img  rigid2D.trsf  vector2D.trsf
BlockMatching/src/blockmatching/documentation/use-examples/pointmatching/: use-pointmatching.bash
BlockMatching/src/blockmatching/documentation/use-examples/pointmatching/figures/: pairings.pptx
BlockMatching/src/libbasic/: CMakeLists.txt  chamfercoefficients-build.c  chamfercoefficients-common.c  chamfercoefficients-results.c  chamfercoefficients-weights.c  chamfercoefficients.c  chamferdistance-mask.c  chamferdistance.c  chamferdistance.h  chunks.c  chunks.h  connexe.c  connexe.h  convert.c  convert.h  convolution.c  convolution.h  convolution1D.c  cspline-coeff.c  cspline-coeff.h  cspline.c  cspline.h  cspline4x4.c  cspline4x4.h  drawShapes.c  drawShapes.h  eigens.c  eigens.h  extract.c  histogram.c  histogram.h  iobmp.c  iogif.c  iopnm.c  iopnm.h  levenberg.c  levenberg.h  linearFiltering-common.c  linearFiltering-contours.c  linearFiltering-gradient.c  (+67 more)
BlockMatching/src/libbasic/templates-generation/: GNUmakefile  GNUmakefile.morpho  GNUmakefile.reech  generateTemplates.sh
BlockMatching/src/libbasic/templates-generation/templates-morpho-include/: morpho.begin  morpho.middle
BlockMatching/src/libbasic/templates-generation/templates-morpho-src/: morpho.begin  morpho.middle
BlockMatching/src/libbasic/templates-generation/templates-reech-include/: cspline4x4-begin.h  cspline4x4-middle.h  reech-def-begin.h  reech-def-end.h  reech-def-middle.h  reech4x4-begin.h  reech4x4-middle.h
BlockMatching/src/libbasic/templates-generation/templates-reech-src/: cspline4x4-begin.c  cspline4x4-middle.c  reech-def-begin.c  reech-def-middle.c  reech4x4-begin.c  reech4x4-middle.c
BlockMatching/src/libio/: CMakeLists.txt  ImageIO.c  ImageIO.h  analyze.c  bmp.c  gif.c  inr.c  inr.h  iris.c  klb.c  klb.h  metaImage.c  metaImage.h  nachos.c  nachos.h  nifti.c  nifti.h  pnm.c  raw.c  test-libio.c  tif.c  tif.h  typedefs.h
I2AE/: README.md  image-to-average-embryo.py  setup.py
I2AE/config-csv/: Registration-on-avg.csv
IO/: README.md  setup.py
IO/IO/: IO.py  __init__.py  folder.py  h5.py  inrimage.py  klb.py  tif.py
SVF/: README.md  SVF-prop.py  setup.py  tissue-bw-prop.py
SVF/csv-parameter-files/: SVF-prop.csv  tissue-bw-prop.csv
TGMMlibraries/: README.md  setup.py
TGMMlibraries/TGMMlibraries/: __init__.py  lineageTree.py
Time-registration/: README.md  setup.py  standalone-registration.py
Time-registration/csv-parameter-files/: standalone-registration.csv
svf2MaMuT/: README.md  SVF2MaMuT.py  mamut_xml_templates.py  setup.py
svf2MaMuT/config-file/: svf2MM.csv
